--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -46,7 +46,9 @@ jobs:
           # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
-      - name: Install Composer dependencies
+      - name: update composer
+        run: composer update
+      - name: Install Composer dependenciesx
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
       - name: Prepare the application
         run: |
