--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,7 +8,6 @@ jobs:
     env:
       DB_DATABASE: laravel
       DB_USERNAME: root
-      DB_PASSWORD: password
       BROADCAST_DRIVER: log
     services:
       mysql:
@@ -23,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.2', '7.3', '7.4']
+        php-versions: ['7.4']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
